sua api rat nhieu